// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HabitDay /> should render the HabitDay 1`] = `
<div
  class="h-10 w-10 rounded-lg border-2 border-zinc-800 bg-zinc-900 false"
/>
`;

exports[`<HabitDay /> should render the HabitDay disabled 1`] = `
<div
  class="h-10 w-10 rounded-lg border-2 border-zinc-800 bg-zinc-900 cursor-not-allowed opacity-40"
/>
`;
